gateway/basic-httproute-template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
  namespace: default
spec:
  # Name of the gateway to link
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    # The backend to send the traffic to 
    backendRefs:
    - name: web
      port: 80
